--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
+    "cf": "wrangler pages dev build",
     "preview": "vite preview",
     "test": "ava src/**/*.test.ts",
     "test:e2e": "playwright test",
@@ -16,7 +17,9 @@
     "deploy": "sh deploy.sh"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20230307.0",
     "@playwright/test": "^1.29.2",
+    "@sveltejs/adapter-cloudflare": "^2.2.0",
     "@sveltejs/adapter-static": "^1.0.0",
     "@sveltejs/kit": "^1.0.1",
     "@tailwindcss/typography": "^0.5.2",
