--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "csv-parse": "^5.3.6",
     "qrcode-svg": "^1.1.0",
     "uint8arrays": "^4.0.2",
+    "uuid": "^9.0.0",
     "webnative": "^0.36.0"
   },
   "engines": {
