--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "clipboard-copy": "^4.0.1",
     "csv-parse": "^5.3.6",
     "qrcode-svg": "^1.1.0",
+    "streaming-iterables": "^7.1.0",
     "uint8arrays": "^4.0.2",
     "uuid": "^9.0.0",
     "webnative": "^0.36.0"
