--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lodash": "^4.17.21",
     "qrcode-svg": "^1.1.0",
     "streaming-iterables": "^7.1.0",
+    "svelte-awesome-color-picker": "^2.4.1",
     "uint8arrays": "^4.0.2",
     "uuid": "^9.0.0",
     "webnative": "^0.36.0"
